Update-finished Video and Picture gallery
Still have to connect the video from youtube.
Js plugin for picture gallery is not fully functional

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@
 title:                Nwangele Post
 deescription:         From Nwangele to the world
 logo:                 'assets/img/logo.png'
+#baseurl:               /nwangelepost
 
 
 # Jekyll
-permalink:            /:title/
+permalink:            pretty
 markdown:             kramdown
 sass:
   sass_dir:           _sass
