--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title:                Nwangele Post
 deescription:         From Nwangele to the world
 logo:                 'assets/img/logo.png'
-#baseurl:               /nwangelepost
+baseurl:               /np.io/
+url:                   "http://localhost:4000/np.io/"
 
 
 # Jekyll
@@ -14,10 +15,13 @@ sass:
 
 #comments
 
-# Social
+collections:
+   gallery:
+    output: true
+
 
 plugins:
-  - jekyll-gallery-generator
+   - jekyll-gallery-generator
 
 # Gems
 gems:
@@ -25,21 +29,36 @@ gems:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-gist
-  -jekyll-gallery-generator
+  - jekyll-gallery-generator
 
 jekyll-mentions:
     base_url: https://github.com
 
 gallery:
-  dir: C:\Users\Andre\Documents\Workspace\2020 PROJECTS\DEV_BLOCK\Nwangele Post\site\assets\images\uploads\gallery               # Path to the gallery
+  dir: photo-gallery               # Path to the gallery
   symlink: false            # false: copy images into _site. true: create symbolic links (saves disk space)
-  title: "Photos"           # Title for gallery index page
+  title: "Gallery"           # Title for gallery index page
   title_prefix: "Photos: "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
   sort_field: "date_time"   # How to sort galleries on the index page.
                             # Possible values are: title, date_time, best_image
   thumbnail_size:
     x: 200px                  # max width of thumbnails (in pixels)
     y: 200px                  # max height of thumbnails (in pixels)
+
+galleries:
+  BisikeDay:
+    best_image: Screenshot_20190304050849.jpg  # The image to show on the gallery index page. Defaults to the last image.
+  French-Party-Festival:
+    best_image: 200611-RZA-250x141.jpg
+    name: "日本の旅"       # Defaults to directory name, replacing _ with spaces & capitalizing words.
+  nwangele-music-festival:
+    best_image: untitled-1.jpg
+    sort_reverse: true    # Reverse sort images in gallery.
+  secret_stuff:
+    hidden: true          # Don't show this gallery on the index page. People must guess the URL.
+  with_info:
+    info:
+      desc: "Gallery Description" # Info fields can be used in custom templates.
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
