--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:                Nwangele Post
 deescription:         From Nwangele to the world
 logo:                 'assets/img/logo.png'
-baseurl:               
-url:                   
+baseurl:              /np.io/
+url:                  "http://localhost:4000/np.io/"     
 
 
 # Jekyll
