--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 # Site
 title:                Nwangele Post
-deescription:         From Nwangele to the world
-logo:                 'assets/img/logo.png'
+description:         From Nwangele to the world
+logo:                 'assets/img/favicon/logo.png'
 baseurl:              /np-site/
 url:                  "http://localhost:4000/np.io/"
-paginate:             10
-paginate_path:        "latest/page:num"     
+image-path:          "assets/images/uploads"
 
-# paginate_path:        "/page:num/"
 
 
 # Jekyll
@@ -20,54 +18,39 @@ sass:
 #comments
 
 collections:
+   feature-cover:
+    output: true
+   feature: 
+    output: true
+    permalink: /features/:path/
+   opinion:
+    output: true
    gallery:
     output: true
-   tags:
-    output: true
-    permalink: tags/
+
 
 
 plugins:
-   - jekyll-gallery-generator
-   - jekyll-paginate
+  - jekyll-paginate-v2
+  - jekyll-feed
+  - jekyll-timeago
 
 # Gems
 gems:
   - jekyll-mentions
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-gallery-generator
-  - jekyll-paginate
+  - jekyll-paginate-v2
+  - jekyll_picture_tag
+  - jekyll-tagging-related_posts
+  - jekyll-timeago
+
+jekyll_timeago:
+  depth: 1
 
 jekyll-mentions:
     base_url: https://github.com
 
-gallery:
-  dir: photo-gallery               # Path to the gallery
-  symlink: false            # false: copy images into _site. true: create symbolic links (saves disk space)
-  title: "Gallery"           # Title for gallery index page
-  title_prefix: "Photos: "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
-  sort_field: "date_time"   # How to sort galleries on the index page.
-                            # Possible values are: title, date_time, best_image
-  thumbnail_size:
-    x: 200px                  # max width of thumbnails (in pixels)
-    y: 200px                  # max height of thumbnails (in pixels)
-
-galleries:
-  BisikeDay:
-    best_image: Screenshot_20190304050849.jpg  # The image to show on the gallery index page. Defaults to the last image.
-  French-Party-Festival:
-    best_image: 200611-RZA-250x141.jpg
-    name: "日本の旅"       # Defaults to directory name, replacing _ with spaces & capitalizing words.
-  nwangele-music-festival:
-    best_image: untitled-1.jpg
-    sort_reverse: true    # Reverse sort images in gallery.
-  secret_stuff:
-    hidden: true          # Don't show this gallery on the index page. People must guess the URL.
-  with_info:
-    info:
-      desc: "Gallery Description" # Info fields can be used in custom templates.
 
 
 # Exclude list
@@ -75,3 +58,70 @@ exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.j
 
 
 include: ["_pages"]
+
+
+
+
+# Site configuration for the Jekyll 3 Pagination Gem
+# The values here represent the defaults if nothing is set
+pagination:
+  
+  # Site-wide kill switch, disabled here it doesn't run at all 
+  enabled: true
+
+  # Set to 'true' to enable pagination debugging. This can be enabled in the site config or only for individual pagination pages
+  debug: false
+
+  # The default document collection to paginate if nothing is specified ('posts' is default)
+  collection: 'posts'
+
+  # How many objects per paginated page, used to be `paginate` (default: 0, means all)
+  per_page: 5
+
+  # The permalink structure for the paginated pages (this can be any level deep)
+  permalink: '/page/:num/' # Pages are index.html inside this folder (default)
+  #permalink: '/page/:num.html' # Pages are simple html files 
+  #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
+
+  # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
+  title: ':title - page :num'
+
+  # Limit how many pagenated pages to create (default: 0, means all)
+  limit: 0
+  
+  # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
+  sort_field: 'date'
+
+  # Optional, sorts the posts in reverse order (omit to default decending or sort_reverse: true)
+  sort_reverse: true
+
+  # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
+  category: 'posts'
+
+  # Optional, the default tag to use, omit to disable
+  tag: ''
+
+  # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts, 
+  # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
+  locale: '' 
+
+ # Optional,omit or set both before and after to zero to disable. 
+ # Controls how the pagination trail for the paginated pages look like. 
+  trail: 
+    before: 2
+    after: 2
+
+  # Optional, the default file extension for generated pages (e.g html, json, xml).
+  # Internally this is set to html by default
+  extension: html
+
+  # Optional, the default name of the index file for generated pages (e.g. 'index.html')
+  # Without file extension
+  indexpage: 'index'
+
+############################################################
+
+
+picture:
+  ignore_missing_images: [development, testing]
+  disabled: true
