--- a/_data/staffs.yml
+++ b/_data/staffs.yml
@@ -4,6 +4,7 @@
   shortcode: gabby
   twitter: gabbz_agba
   bio: Gabby has the wrong qualifications and shouldn't be here. Fortunately no one told him and he went and became a freelance web developer anyway.
+  photo: random/200611-Ice-Cube-250x141.jpg
 
 - name: Kwame Kwado
   team: Editorial
@@ -11,7 +12,7 @@
   shortcode: Kwame
   twitter: kwae
   bio: Kwame has the wrong qualifications and shouldn't be here. Fortunately no one told him and he went and became a freelance web developer anyway.
-
+  photo: random/img-1a.jpg
 
 - name: Oluchi Gramesz
   team: Editorial
@@ -19,6 +20,7 @@
   shortcode: oluchi
   twitter: gabbz_agba
   bio: Zell has the wrong qualifications and shouldn't be here. Fortunately no one told him and he went and became a freelance web developer anyway.
+  photo: random/untitled77.png
 
 - name: Angelina Okoli
   team: Editorial
