--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: ruby
+rvm:
+  -2.6
 
 cache: bundler 
 
-before_install: gem update bundler
+before_install: gem install bundler
 
 install:
   - bundle install
