--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -77,6 +77,7 @@ plugins:
   - jekyll/tagging
   - jekyll-tagging-related_posts
   - jekyll-timeago
+  - 'jekyll-algolia'
 
 # Plugin: Jekyll-Timeago
 jekyll_timeago:
