--- a/package.json
+++ b/package.json
@@ -8,32 +8,33 @@
     "child_process": "^1.0.2",
     "del": "^5.1.0",
     "flat-map": "^1.0.0",
-    "gulp-cleancss": "^0.2.2",
-    "gulp-cache": "^1.1.3",
-    "gulp-autoprefixer": "^7.0.1",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cache": "^1.1.3",
+    "gulp-cleancss": "^0.2.2",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-gm": "^0.0.9",
-    "gulp-image-resize": "^0.13.1",
-    "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.2",
+    "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-rsync": "^0.0.9",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-ruby-sass": "^4.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-rsync": "^0.0.9",
+    "gulp-ruby-sass": "^4.0.0",
     "gulp-run": "^1.7.1",
-    "gulp-newer": "^1.4.0",
-    "gulp-scale-images": "^2.1.0",
-    "gulp-util": "^3.0.8",
-    "gulp-sourcemaps": "^2.6.5",
     "gulp-sass": "^4.1.0",
+    "gulp-scale-images": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-useref": "^4.0.1",
-    "imagemin-mozjpeg": "^9.0.0",
+    "gulp-util": "^3.0.8",
     "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.0",
+    "instantsearch.js": "^4.7.1",
     "node-sass": "^4.14.1",
     "run-sequence": "^2.2.1",
     "uglify": "^0.1.5"
